# Power-Systems-Data-API-Demonstrator

./: .gitignore  .pre-commit-config.yaml  Dockerfile  EnergyModels.cs  FuelType.cs  GridNode.cs  GridNodeType.cs  LFEnergy.csproj  LFEnergy.sln  Pollutant.cs  Program.cs  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  server_start.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: docker-image.yml  test.yml
Controllers/: SystemController.cs
Properties/: launchSettings.json
Services/: EiaCsvService.cs  NodeService.cs
data/EIA/: clean EIA data.ipynb  generation.csv  imports_exports.csv  installed_capacity.csv  load_forecast.csv
data/EIA/raw/: imports_exports.csv
data/ELEXON/: generation.csv  generation_by_production_type.csv  imports_exports.csv  installed_capacity.csv  interconnector_exchanges.csv  reformat_for_seeding.ipynb
data/ELEXON/notebooks/: bmrs_generation_production_type.ipynb  bmrs_load_forecasts.ipynb
data/ELEXON/raw/: bmrs_load_forecasts_raw.csv  installed_generation_by_capacity_raw.csv
data/ENTSO-E/: Clean ENTSOE data.ipynb  generation.csv  generation_ES-ALMARAZ-0.csv  generation_ES-ALMARAZ-1.csv  generation_ES-ALMARAZ-2.csv  generation_ES-ALMARAZ-UNIT1.csv  generation_ES-ALMARAZ.csv  imports_exports.csv  installed_capacity.csv  load_forecast.csv
data/ENTSO-E/raw/: Actual Generation per Generation Unit_202304150000-202304160000_1.csv  Cross-Border Physical Flow_202211010000-202211020000.csv  Installed Capacity per Production Type_202201010000-202301010000.csv  Total Load - Day Ahead _ Actual_202211010000-202211020000.csv
data/Power data for API spec/EIA/: capacity.csv  clean EIA data.ipynb  imports_exports.csv
data/Power data for API spec/ENTSO-E/: Clean ENTSOE data.ipynb
data/Power data for API spec/Elexon/: installed_generation_capacity.csv
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
load_data/: seed.py
power_systems_data_api_demonstrator/: __init__.py  __main__.py  conftest.py  settings.py
power_systems_data_api_demonstrator/data/EIA/: clean EIA data.ipynb  generation.csv  imports_exports.csv  load_forecast.csv
power_systems_data_api_demonstrator/data/ELEXON/: generation.csv  imports_exports.csv  installed_capacity.csv  reformat_for_seeding.ipynb
power_systems_data_api_demonstrator/data/ENTSO-E/: Clean ENTSOE data.ipynb  generation.csv  generation_ES-ALMARAZ-0.csv  generation_ES-ALMARAZ-UNIT1.csv  generation_ES-ALMARAZ-UNIT2.csv  imports_exports.csv  load_forecast.csv
power_systems_data_api_demonstrator/data/example/: fuel_source_metadata.csv  psr_metadata.csv  psr_metadata.json  topology_metadata.csv
power_systems_data_api_demonstrator/db/: base.py
power_systems_data_api_demonstrator/db/dao/: grid_node_dao.py
power_systems_data_api_demonstrator/db/models/: __init__.py  grid_node_model.py
power_systems_data_api_demonstrator/etl/: add_eia.py  seed.py
power_systems_data_api_demonstrator/seed/: seed.py
power_systems_data_api_demonstrator/src/: __init__.py  application.py  lifetime.py
power_systems_data_api_demonstrator/src/api/: __init__.py  db.py  router.py  seed.py
power_systems_data_api_demonstrator/static/docs/: description.md  swagger-ui.css  (+2 more)
power_systems_data_api_demonstrator/tests/: __init__.py  conftest.py  test_dummy.py  test_echo.py  test_health.py  test_power_systems_data_api_demonstrator.py  test_redis.py  test_routes.py
power_systems_data_api_demonstrator/web/: application.py  lifetime.py
tests/: __init__.py  conftest.py  test_routes.py  test_seed.py
(+51 files in other folders)
